--- a/server/views/logindesign/register.pug
+++ b/server/views/logindesign/register.pug
@@ -57,7 +57,7 @@
 
                     <div>
                         <label for="email-tf" class="sr-only">Email address</label>
-                        <input id="email-tf" name="email" type="email" autocomplete="email" required class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" placeholder="Email">
+                        <input id="email-tf" name="email" type="email" autocomplete="email" required class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" placeholder="Institute Email">
                     </div>
 
                     <br>
