--- a/server/views/qtypes/qmap.pug
+++ b/server/views/qtypes/qmap.pug
@@ -21,6 +21,12 @@ html(lang="en")
                 br
                 br
     include components/insertImageForm.pug
+    div(style="padding-bottom:100px")  
+        //- button(type="submit") Upload
+        <button style="margin:auto;display:table" id="qmapSubmit" class="flex-shrink-0 bg-purple-600 text-white text-base font-semibold py-2 px-4 rounded-lg shadow-md hover:bg-purple-700 focus:outline-none focus:ring-2 focus:ring-purple-500 focus:ring-offset-2 focus:ring-offset-purple-200" type="button">
+            | Submit
+            <i class="bi bi-arrow-right"></i>
+        </button>
 
 include components/footer.pug
 script(src="js/qmap.js") 
