Fixed Sudoku Layout

--- a/server/views/qtypes/qcrossward/sudoku2.pug
+++ b/server/views/qtypes/qcrossward/sudoku2.pug
@@ -37,7 +37,7 @@ html(lang="en")
                 </div>
                 br
 
-            include ../components/myinput.pug
+            //- include ../components/myinput.pug
         include ../components/footer.pug
         <script src="js/sudoku/sudoku2.js"></script>
         include qcrosscomponents/footer.pug
