Added Multer FileUpload

--- a/server/views/qtypes/components/insertImageForm.pug
+++ b/server/views/qtypes/components/insertImageForm.pug
@@ -1,5 +1,5 @@
-<form id="file-upload-form" class="uploader" style="margin-bottom:50px">
-<input id="file-upload" type="file" name="fileUpload" accept="image/*" />
+<form id="file-upload-form" action="/level4upload" class="uploader" style="margin-bottom:50px" method="POST" enctype="multipart/form-data">
+<input id="file-upload" type="file" name="sudokufileupload" accept="image/*" />
 
 <label for="file-upload" id="file-drag">
     <img id="file-image" src="#" alt="Preview" class="hidden">
