--- a/server/views/qtypes/qmap.pug
+++ b/server/views/qtypes/qmap.pug
@@ -11,7 +11,7 @@ html(lang="en")
             .loadingspinner
         div(id="mygamecomponents",style="display:none")
             div(style='text-align:center; padding-top:225px;width:90%;margin:auto;')
-                p(style='font-weight:900;letter-spacing:1px;font-size:20px') #{heading_content}
+                p(style='font-weight:900;letter-spacing:1px;font-size:20px') Solve this map
                 br
                 div
                     //- img(src=image_url alt='Nature' style='height: 300px;margin:auto;object-fit:contain')
