--- a/server/views/qtypes/qmap.pug
+++ b/server/views/qtypes/qmap.pug
@@ -27,7 +27,7 @@ html(lang="en")
             | Submit
             <i class="bi bi-arrow-right"></i>
         </button>
-
+include qmap/checkingmodal.pug
 include components/footer.pug
 script(src="js/qmap.js") 
 
