--- a/server/views/logindesign/components/successdialog.pug
+++ b/server/views/logindesign/components/successdialog.pug
@@ -16,7 +16,7 @@
                     <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
                         <h3 class="text-lg leading-6 font-medium text-gray-900" id="succes_mondal_title"> Account Created! </h3>
                         <div class="mt-2">
-                            <p class="text-sm text-gray-500" id="succes_mondal_content"> Your account has been created.<br> Click OK to return to the login page.</p>
+                            <p class="text-sm text-gray-500" id="succes_mondal_content"> Your account has been created.<br> We have sent account verification link to your email address. Kindly verify your account before the event.</p>
                         </div>
                     </div>
                 </div>
@@ -33,4 +33,5 @@
 script.
     $("#successokbutton").click(function(){
         $("#successdialog").slideUp();
+        window.location.href = "/";
     });
