--- a/server/views/logindesign/components/dialog.pug
+++ b/server/views/logindesign/components/dialog.pug
@@ -22,7 +22,8 @@
                 </div>
             </div>
             <div class="bg-gray-50 px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
-                <button id="tryagainbtn" type="button" class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-purple-600 text-base font-medium text-white hover:bg-purple-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-purple-500 sm:ml-3 sm:w-auto sm:text-sm"> OK </button>
+                <button id="tryagainbtn" type="button" class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm"> OK </button>
+                <button id="resendMailBtn" type="button" class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-purple-600 text-base font-medium text-white hover:bg-purple-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-purple-500 sm:ml-3 sm:w-auto sm:text-sm"> Resend </button>
                 //- <button id="hintbtn" type="button" class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm"> Use Hint </button>
             </div>
         </div>
@@ -33,4 +34,16 @@
 script.
     $("#tryagainbtn").click(function(){
         $("#wrongpopup").slideUp();
+    });
+
+    $("#resendMailBtn").click(function(){
+        $("#wrongpopup").slideUp();
+
+        let verificationURL = '/sendVerificationUrl?user=' + $("#user-tf").val();
+        $.get(verificationURL,()=>{});
+        iziToast.success({
+            title: 'OK',
+            message: 'Verification Email Sent. Check Your Mail Box!',
+            position: 'topRight'
+        });
     });
